# highlight

./: .gitignore  README.md  color_phrases.json  color_phrases.json.sample  color_words.json  pyproject.toml
scripts/: print.py  run_tests.sh
src/highlight/: __init__.py  main.py
tests/highlight/: __init__.py  test_integration.py  test_main.py
